logs/zc.monitor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/monitor'...
Compiling './lib/python3.5/site-packages/zc/monitor/__init__.py'...
***   File "./lib/python3.5/site-packages/zc/monitor/__init__.py", line 59
    except Exception, v:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zc/ngi'...
Compiling './lib/python3.5/site-packages/zc/ngi/async.py'...
***   File "./lib/python3.5/site-packages/zc/ngi/async.py", line 329
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zc/ngi/blocking.py'...
***   File "./lib/python3.5/site-packages/zc/ngi/blocking.py", line 119
    raise exception[0], exception[1], exception[2]
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zc/ngi/doc'...
Compiling './lib/python3.5/site-packages/zc/ngi/doc/echo_server.py'...
***   File "./lib/python3.5/site-packages/zc/ngi/doc/echo_server.py", line 12
    print 'closed', reason
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/ngi/testing.py'...
***   File "./lib/python3.5/site-packages/zc/ngi/testing.py", line 32
    print '->', data[:50]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/ngi/wordcount.py'...
***   File "./lib/python3.5/site-packages/zc/ngi/wordcount.py", line 116
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zc.monitor-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/zc.ngi-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/testing'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.testing-4.6.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
